apps/wordpress/overlays/prd-old/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    link.argocd.argoproj.io/external-link: https://www.diegoluisi.eti.br
spec:
  hosts:
    - "www.diegoluisi.eti.br"
  # - "blog.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: wordpress.wordpress.svc.lgsk8sp1.grupologos.local
